grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    pass_statement: _ => prec.left('pass'),
    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    dotted_name: $ => prec(1, sep1($.identifier, '.')),

    // Match cases

    string: $ => seq(
      $.string_start,
      repeat(choice($.interpolation, $.string_content)),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: _ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    )),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    c_type: $ => {
      const keyword = value => alias(value, $.identifier);
      const complex_keyword = alias(token(prec(1, 'complex')), $.identifier);
      const integer_type = choice(
        keyword('char'),
        keyword('short'),
        seq(keyword('short'), keyword('int')),
        keyword('int'),
        keyword('long'),
        seq(keyword('long'), keyword('int')),
        seq(keyword('long'), keyword('long')),
        seq(keyword('long'), keyword('long'), keyword('int')),
      );
      const numeric_type = choice(
        integer_type,
        seq(keyword('float'), complex_keyword),
        seq(keyword('double'), complex_keyword),
        seq(keyword('long'), keyword('double'), complex_keyword),
        keyword('float'),
        keyword('double'),
        seq(keyword('long'), keyword('double')),
      );

      return prec.right(PREC.c_type, seq(
        optional('const'),
        choice(
          seq(choice(keyword('unsigned'), keyword('signed')), choice(integer_type, $.identifier)),
          numeric_type,
          keyword('void'),
          keyword('bint'),
          $.c_tuple_type,
          $.parenthesized_c_type,
          $.dotted_name,
          $.identifier,
        ),
        optional(field('suffix', choice(
          $.c_pointer_declarator,
          $.c_reference_declarator,
          $.c_memoryview_declarator,
          repeat1($.c_array_declarator),
        ))),
      ));
    },

    c_pointer_declarator: _ => prec(PREC.c_type, repeat1('*')),

    c_reference_declarator: _ => prec(PREC.c_type, '&'),

    c_declarator: $ => choice(
      seq(
        field('function_pointer', $.c_function_pointer_declarator),
        optional(seq('=', field('value', $.expression))),
      ),
      $._c_simple_declarator,
    ),

    _c_simple_declarator: $ => seq(
      optional(field('prefix', $.c_pointer_declarator)),
      field('name', $.identifier),
      optional(field('suffix', repeat1($.c_array_declarator))),
      optional(seq('=', field('value', $.expression))),
    ),

    c_array_declarator: $ => seq(
      '[',
      optional(field('size', $.integer)),
      ']',
    ),

    cdef_statement: $ => prec(PREC.cdef, seq(
      'cdef',
      optional(choice('readonly', 'public')),
      field('type', $.c_type),
      commaSep1(field('declarator', $.c_declarator)),
    )),

    cdef_attribute_declaration: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      field('visibility', choice(
        alias('public', $.identifier),
        alias('readonly', $.identifier),
      )),
      field('name', $.identifier),
    )),

    // bare typed declarations inside extern/struct blocks: `int x`
    c_variable_declaration: $ => prec(PREC.c_type, seq(
      field('type', $.c_type),
      commaSep1(field('declarator', $.c_declarator)),
    )),

    cdef_block: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      ':',
      field('body', $._cython_extern_suite),
    )),

    cdef_struct_definition: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      optional(field('modifier', alias('packed', $.identifier))),
      field('kind', alias('struct', $.identifier)),
      field('name', $.identifier),
      ':',
      field('body', $._cython_extern_suite),
    )),

    cdef_union_definition: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      field('kind', alias('union', $.identifier)),
      field('name', $.identifier),
      ':',
      field('body', $._cython_extern_suite),
    )),

    c_struct_definition: $ => prec(PREC.cdef + 1, seq(
      field('kind', alias('struct', $.identifier)),
      field('name', $.identifier),
      ':',
      field('body', $._cython_extern_suite),
    )),

    cdef_enum_definition: $ => prec(PREC.cdef + 1, seq(
      choice('cdef', 'cpdef'),
      'enum',
      optional(field('name', $.identifier)),
      ':',
      field('body', $._c_enum_suite),
    )),

    c_enum_member: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $.expression))),
    ),

    _c_enum_suite: $ => choice(
      seq($._indent, alias($._c_enum_block, $.block)),
      alias($._newline, $.block),
    ),

    c_parameters: $ => seq(
      '(',
      optional($._c_parameters_list),
      ')',
    ),

    c_declaration_parameters: $ => seq(
      '(',
      optional($._c_declaration_parameters_list),
      ')',
    ),

    _c_parameters_list: $ => seq(
      commaSep1(choice($.c_parameter, $.c_variadic_parameter)),
      optional(','),
    ),

    _c_declaration_parameters_list: $ => seq(
      commaSep1(choice($.c_declaration_parameter, $.c_variadic_parameter)),
      optional(','),
    ),

    c_parameter: $ => choice(
      seq(
        field('type', $.c_type),
        field('name', $.identifier),
        optional(seq('=', field('default', $.expression))),
      ),
      seq(
        field('type', $.c_function_pointer_type),
        optional(seq('=', field('default', $.expression))),
      ),
      $.parameter,
    ),

    c_declaration_parameter: $ => choice(
      seq(
        field('type', $.c_function_pointer_type),
        optional(seq('=', field('default', $.expression))),
      ),
      seq(
        field('type', $.c_type),
        field('name', $.identifier),
        optional(seq('=', field('default', $.expression))),
      ),
      seq(
        field('type', $.c_type),
        optional(seq('=', field('default', $.expression))),
      ),
      $.parameter,
    ),

    c_variadic_parameter: _ => '...',

    cdef_except_clause: $ => seq(
      'except',
      choice(
        '+',
        '?',
        seq(optional('?'), $.expression),
        '*',
      ),
    ),

    _c_function_modifiers: $ => choice(
      seq(
        field('noexcept', $.c_noexcept_clause),
        optional(field('nogil', alias('nogil', $.identifier))),
        optional(field('except_clause', $.cdef_except_clause)),
      ),
      seq(
        field('nogil', alias('nogil', $.identifier)),
        optional(field('except_clause', $.cdef_except_clause)),
      ),
      field('except_clause', $.cdef_except_clause),
    ),

    // bare function declarations inside extern blocks: `T sin[T](T x)`
    c_function_declaration: $ => prec(PREC.cdef, seq(
      field('return_type', $.c_type),
      field('name', $.identifier),
      optional(field('type_parameters', $.c_template_parameters)),
      field('parameters', $.c_declaration_parameters),
      optional($._c_function_modifiers),
    )),

    // Custom suite for cdef extern blocks and ctypedef struct/union/enum bodies
    // where bare C declarations (c_function_declaration, c_variable_declaration) are valid
    _cython_extern_suite: $ => choice(
      seq($._indent, alias($._cython_extern_block, $.block)),
      alias($._newline, $.block),
    ),

    cdef_class_definition: $ => seq(
      'cdef',
      'class',
      field('name', $.identifier),
      field('superclasses', optional($.argument_list)),
      ':',
      field('body', $._suite),
    ),

    cpp_class_definition: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      'cppclass',
      field('name', $.identifier),
      optional(field('type_parameters', $.c_template_parameters)),
      ':',
      field('body', $._cpp_class_suite),
    )),

    _cpp_class_suite: $ => choice(
      seq($._indent, alias($._cpp_class_block, $.block)),
      alias($._newline, $.block),
    ),

    cpp_constructor_declaration: $ => prec(PREC.c_type + 1, seq(
      field('name', $.identifier),
      field('parameters', $.c_declaration_parameters),
      optional($._c_function_modifiers),
    )),

    cpp_operator_declaration: $ => prec(PREC.c_type + 1, seq(
      optional(field('return_type', $.c_type)),
      field('operator', $.cpp_operator),
      optional(field('type_parameters', $.c_template_parameters)),
      field('parameters', $.c_declaration_parameters),
      optional($._c_function_modifiers),
    )),

    cpp_operator: $ => seq(
      'operator',
      choice(
        '+', '-', '*', '/', '%', '^', // Arithmetic
        '&', '|', '~', '!', //Bitwise
        '=', // Assignmnet
        '<', '>', '==', '!=', '<=', '>=', // Comparison
        '<<', '>>', // Shift        
        '++', '--', // Increment
        ',', seq('(', ')'), seq('[', ']'), // Access
        $.c_type,
      ),
    ),

    c_template_parameters: $ => seq(
      '[',
      commaSep1(choice(
        $.identifier,
        $.default_type_parameter,
      )),
      optional(','),
      ']',
    ),

    default_type_parameter: $ => seq(
      field('name', $.identifier),
      '=',
      '*',
    ),

    // --- Phase 5: ctypedef ---

    ctypedef_statement: $ => prec(PREC.cdef, seq(
      'ctypedef',
      choice(
        field('type', $.c_function_pointer_type),
        seq(
          field('type', $.c_type),
          field('name', $.identifier),
        ),
      ),
    )),

    c_function_pointer_type: $ => prec(PREC.cdef + 1, seq(
      field('return_type', $.c_type),
      '(',
      '*',
      field('name', $.identifier),
      ')',
      field('parameters', $.c_parameters),
      optional($._c_function_modifiers),
    )),

    ctypedef_struct_declaration: $ => prec(PREC.cdef, seq(
      'ctypedef',
      $._ctypedef_struct_head,
      optional(field('cname', $.string)),
    )),

    ctypedef_struct_definition: $ => prec(PREC.cdef + 1, seq(
      'ctypedef',
      $._ctypedef_struct_head,
      optional(field('cname', $.string)),
      ':',
      field('body', $._cython_extern_suite),
    )),

    ctypedef_enum_definition: $ => prec(PREC.cdef + 2, seq(
      'ctypedef',
      field('kind', alias('enum', $.identifier)),
      field('name', $.identifier),
      ':',
      field('body', $._c_enum_suite),
    )),

    _ctypedef_struct_head: $ => seq(
      field('kind', choice(
        alias('struct', $.identifier),
        alias('union', $.identifier),
        alias('enum', $.identifier),
      )),
      field('name', $.identifier),
    ),

    cdef_extern_block: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      'extern',
      optional(seq(
        'from',
        field('source', choice($.string, '*')),
      )),
      optional(seq(
        'namespace',
        field('namespace', $.string),
      )),
      optional('nogil'),
      ':',
      field('body', $._cython_extern_suite),
    )),

    // --- Phase 7: compile-time directives, include, property ---
