test/corpus/cython.txt
================================================================================
cdef extern namespace option
================================================================================

cdef extern from "<vector>" namespace "std" nogil:
    pass

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    namespace: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (pass_statement))))

================================================================================
C++ cppclass template
================================================================================

cdef extern from "<vector>" namespace "std":
    cdef cppclass vector[T, ALLOCATOR=*]:
        ctypedef T value_type

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    namespace: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (cpp_class_definition
        name: (identifier)
        type_parameters: (c_template_parameters
          (identifier)
          (default_type_parameter
            name: (identifier)))
        body: (block
          (ctypedef_statement
            type: (c_type
              (identifier))
            name: (identifier)))))))

================================================================================
C++ constructors, operators, and except plus
================================================================================

cdef extern from "<vector>" namespace "std":
    cdef cppclass iterator:
        iterator() except +
        T& operator*()
        bint operator==(iterator)

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    namespace: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (cpp_class_definition
        name: (identifier)
        body: (block
          (cpp_constructor_declaration
            name: (identifier)
            parameters: (c_declaration_parameters)
            except_clause: (cdef_except_clause))
          (cpp_operator_declaration
            return_type: (c_type
              (identifier)
              suffix: (c_reference_declarator))
            operator: (cpp_operator)
            parameters: (c_declaration_parameters))
          (cpp_operator_declaration
            return_type: (c_type
              (identifier))
            operator: (cpp_operator)
            parameters: (c_declaration_parameters
              (c_declaration_parameter
                type: (c_type
                  (identifier))))))))))

================================================================================
templated C function declaration
================================================================================

cdef extern from "<algorithm>" namespace "std":
    bool all_of[Iter, Pred](Iter first, Iter last, Pred pred)

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    namespace: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (c_function_declaration
        return_type: (c_type
          (identifier))
        name: (identifier)
        type_parameters: (c_template_parameters
          (identifier)
          (identifier))
        parameters: (c_declaration_parameters
          (c_declaration_parameter
            type: (c_type
              (identifier))
            name: (identifier))
          (c_declaration_parameter
            type: (c_type
              (identifier))
            name: (identifier))
          (c_declaration_parameter
            type: (c_type
              (identifier))
            name: (identifier)))))))

================================================================================
forward ctypedef struct
================================================================================

cdef extern from "Python.h":
    ctypedef struct PyObject

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (ctypedef_struct_declaration
        kind: (identifier)
        name: (identifier)))))

================================================================================
renamed ctypedef struct body
================================================================================

cdef extern from *:
    ctypedef struct __pyx_memoryview "__pyx_memoryview_obj":
        Py_buffer view

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    body: (block
      (ctypedef_struct_definition
        kind: (identifier)
        name: (identifier)
        cname: (string
          (string_start)
          (string_content)
          (string_end))
        body: (block
          (c_variable_declaration
            type: (c_type
              (identifier))
            declarator: (c_declarator
              name: (identifier))))))))

================================================================================
cdef struct body
================================================================================

cdef extern from "<time.h>":
    cdef struct timespec:
        time_t tv_sec
        long tv_nsec

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (cdef_struct_definition
        kind: (identifier)
        name: (identifier)
        body: (block
          (c_variable_declaration
            type: (c_type
              (identifier))
            declarator: (c_declarator
              name: (identifier)))
          (c_variable_declaration
            type: (c_type
              (identifier))
            declarator: (c_declarator
              name: (identifier))))))))

================================================================================
bare struct body
================================================================================

cdef extern from "<time.h>":
    struct timespec:
        time_t tv_sec

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (c_struct_definition
        kind: (identifier)
        name: (identifier)
        body: (block
          (c_variable_declaration
            type: (c_type
              (identifier))
            declarator: (c_declarator
              name: (identifier))))))))

================================================================================
cdef union body
================================================================================

cdef extern from "<signal.h>":
    cdef union sigval:
        int sival_int
        void *sival_ptr

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (cdef_union_definition
        kind: (identifier)
        name: (identifier)
        body: (block
          (c_variable_declaration
            type: (c_type
              (identifier))
            declarator: (c_declarator
              name: (identifier)))
          (c_variable_declaration
            type: (c_type
              (identifier)
              suffix: (c_pointer_declarator))
            declarator: (c_declarator
              name: (identifier))))))))

================================================================================
cdef enum body
================================================================================

cdef enum NPY_TYPES:
    NPY_BOOL
    NPY_BYTE

--------------------------------------------------------------------------------

(module
  (cdef_enum_definition
    name: (identifier)
    body: (block
      (c_enum_member
        name: (identifier))
      (c_enum_member
        name: (identifier)))))

================================================================================
anonymous cdef enum body
================================================================================

cdef extern from "Python.h":
    cdef enum:
        PyBUF_SIMPLE
        PyBUF_WRITABLE

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (cdef_enum_definition
        body: (block
          (c_enum_member
            name: (identifier))
          (c_enum_member
            name: (identifier)))))))

================================================================================
ctypedef enum values
================================================================================

cdef extern from "libxml/tree.h":
    ctypedef enum xmlElementType:
        XML_ELEMENT_NODE = 1
        XML_TEXT_NODE = 3

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (ctypedef_enum_definition
        kind: (identifier)
        name: (identifier)
        body: (block
          (c_enum_member
            name: (identifier)
            value: (integer))
          (c_enum_member
            name: (identifier)
            value: (integer)))))))

================================================================================
unnamed C parameters
================================================================================

cdef extern from "math.h":
    float acosf(float)
    void *dlopen(const char *, int)

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (c_function_declaration
        return_type: (c_type
          (identifier))
        name: (identifier)
        parameters: (c_declaration_parameters
          (c_declaration_parameter
            type: (c_type
              (identifier)))))
      (c_function_declaration
        return_type: (c_type
          (identifier)
          suffix: (c_pointer_declarator))
        name: (identifier)
        parameters: (c_declaration_parameters
          (c_declaration_parameter
            type: (c_type
              (identifier)
              suffix: (c_pointer_declarator)))
          (c_declaration_parameter
            type: (c_type
              (identifier))))))))

================================================================================
C varargs declaration
================================================================================

cdef extern from "Python.h":
    object PyErr_Format(object exception, char *format, ...)

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (c_function_declaration
        return_type: (c_type
          (identifier))
        name: (identifier)
        parameters: (c_declaration_parameters
          (c_declaration_parameter
            type: (c_type
              (identifier))
            name: (identifier))
          (c_declaration_parameter
            type: (c_type
              (identifier)
              suffix: (c_pointer_declarator))
            name: (identifier))
          (c_variadic_parameter))))))

================================================================================
function pointer typedef
================================================================================

ctypedef void (*xmlGenericErrorFunc)(void* ctxt, char* msg, ...) nogil

--------------------------------------------------------------------------------

(module
  (ctypedef_statement
    type: (c_function_pointer_type
      return_type: (c_type
        (identifier))
      name: (identifier)
      parameters: (c_parameters
        (c_parameter
          type: (c_type
            (identifier)
            suffix: (c_pointer_declarator))
          name: (identifier))
        (c_parameter
          type: (c_type
            (identifier)
            suffix: (c_pointer_declarator))
          name: (identifier))
        (c_variadic_parameter))
      nogil: (identifier))))

================================================================================
function pointer parameter
================================================================================

cdef extern from "<stdlib.h>":
    int atexit(void (*function)())

--------------------------------------------------------------------------------

(module
  (cdef_extern_block
    source: (string
      (string_start)
      (string_content)
      (string_end))
    body: (block
      (c_function_declaration
        return_type: (c_type
          (identifier))
        name: (identifier)
        parameters: (c_declaration_parameters
          (c_declaration_parameter
            type: (c_function_pointer_type
              return_type: (c_type
                (identifier))
              name: (identifier)
              parameters: (c_parameters))))))))

================================================================================
C array declarators
================================================================================

cdef int values[3]
cdef float[42] g
cdef PyObject* objects[3]

--------------------------------------------------------------------------------

(module
  (cdef_statement
    type: (c_type
      (identifier))
    declarator: (c_declarator
      name: (identifier)
      suffix: (c_array_declarator
        size: (integer))))
  (cdef_statement
    type: (c_type
      (identifier)
      suffix: (c_array_declarator
        size: (integer)))
    declarator: (c_declarator
      name: (identifier)))
  (cdef_statement
    type: (c_type
      (identifier)
      suffix: (c_pointer_declarator))
    declarator: (c_declarator
      name: (identifier)
      suffix: (c_array_declarator
        size: (integer)))))

================================================================================
typed cdef block
================================================================================

cdef:
    int x
    PyObject* objects[3]

--------------------------------------------------------------------------------

(module
  (cdef_block
    body: (block
      (c_variable_declaration
        type: (c_type
          (identifier))
        declarator: (c_declarator
          name: (identifier)))
      (c_variable_declaration
        type: (c_type
          (identifier)
          suffix: (c_pointer_declarator))
        declarator: (c_declarator
          name: (identifier)
          suffix: (c_array_declarator
            size: (integer)))))))

================================================================================
dotted C types
================================================================================

cdef tree.xmlNode* c_node
ctypedef np.npy_bool bool_t

--------------------------------------------------------------------------------

(module
  (cdef_statement
    type: (c_type
      (dotted_name
        (identifier)
        (identifier))
      suffix: (c_pointer_declarator))
    declarator: (c_declarator
      name: (identifier)))
  (ctypedef_statement
    type: (c_type
      (dotted_name
        (identifier)
        (identifier)))
    name: (identifier)))

================================================================================
untyped public class attributes
================================================================================

cdef class Scanner:
    cdef public stream
    cdef public name

--------------------------------------------------------------------------------

(module
  (cdef_class_definition
    name: (identifier)
    body: (block
      (cdef_attribute_declaration
        visibility: (identifier)
        name: (identifier))
      (cdef_attribute_declaration
        visibility: (identifier)
        name: (identifier)))))


